added tire parameter input for changes in traction

--- a/fssim_common/CMakeLists.txt
+++ b/fssim_common/CMakeLists.txt
@@ -41,6 +41,7 @@ add_message_files(FILES
         Mission.msg
         Track.msg
         State.msg
+	TireParams.msg
         )
 
 generate_messages(DEPENDENCIES std_msgs geometry_msgs)
