--- a/fssim_gazebo/models/track/model.config
+++ b/fssim_gazebo/models/track/model.config
@@ -6,7 +6,7 @@
 <model>
   <name>track</name>
   <version>1.0</version>
-  <sdf version="1.4">FSG.sdf</sdf>
+  <sdf version="1.4">asta_zero.sdf</sdf>
   <description>random track</description>
 </model>
 
