added additional params in gotthard model

--- a/fssim_description/cars/gotthard/config/car.yaml
+++ b/fssim_description/cars/gotthard/config/car.yaml
@@ -34,6 +34,7 @@ car:
     b_R: 1.22         # From COG to rear axle [m]
     w_front: 0.5    # Percentage of weight front
     h_cg: 0.262       # Heights of COG [m]
+    l_width: 3.0     # Width of the vehicle body
 
     # l_F = l * (1 - w_front);  # Front cg lever arm [m]
     # l_R = l * w_front;  # Rear  cg lever arm [m]
